[package]
name = "exclaim_bench"
version = "0.1.0"
authors = ["jakob <Jakobpstrobl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"

[dependencies.exclaim]
path = "../exclaim"

[[bench]]
name = "benchmarks"
path = "benches/lib.rs"
harness = false